:fire: REMOVE: unused components

--- a/src/content/pages/elements.mdx
+++ b/src/content/pages/elements.mdx
@@ -1,21 +1,27 @@
 ---
-title: "Elements"
-meta_title: ""
-description: "this is meta description"
+title: "Productos"
+meta_title: "Nuestros Productos - Mercado Regional"
+description: "Descubra nuestra selección de productos locales, frescos y de calidad en Mercado Regional"
 draft: false
 ---
 
-# Heading 1
+# Nuestros Productos
 
-## Heading 2
+En Mercado Regional, nos enorgullece ofrecer una amplia variedad de productos locales de la más alta calidad. Todos nuestros productos son cuidadosamente seleccionados de productores locales que comparten nuestra pasión por la calidad y la autenticidad.
 
-### Heading 3
+## Categorías de Productos
 
-#### Heading 4
+### Productos Frescos
 
-##### Heading 5
+Frutas y verduras de temporada cultivadas por agricultores locales.
 
-###### Heading 6
+### Productos Artesanales
+
+Alimentos preparados con técnicas tradicionales y recetas heredadas por generaciones.
+
+### Productos Orgánicos
+
+Cultivados sin pesticidas ni productos químicos dañinos para la salud y el medio ambiente.
 
 ---
 
@@ -243,7 +249,7 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 ### Youtube video
 
-<Youtube client:load id="C0DPdy98e4c" title="Play:Youtube"/>
+<Youtube client:load id="C0DPdy98e4c" title="Play:Youtube" />
 
 ---
 
